Fix works section to work better on mobile

--- a/sass/_works.sass
+++ b/sass/_works.sass
@@ -64,12 +64,24 @@
 
 @media (max-width: 1170px) 
 
+	.adventure .works__description
+		left: 0 
+
 	.works__description
-		position: static
+		bottom: -3em
+		left: 0
+		right: 0
+		margin: -0.5em auto
+		font-size: 1.5rem
+		padding: 1em 0.5em
 
 	.food, .adventure, .watch
+		margin-bottom: 12em
 		max-width: 100%
 		flex-direction: column
 
 	.adventure
 		float: none
+	
+	.watch
+		margin-bottom: 0
